fix text overflow

--- a/src/app/components/message-box/message-box.component.css
+++ b/src/app/components/message-box/message-box.component.css
@@ -2,7 +2,7 @@
     background-color: #e6e9ea;
     border-radius: 25px 25px 25px 5px;
     margin-right: 10%;
-    height: 20px;
+    min-height: 20px;
     padding: 10px;
     width: 100%;
 }
@@ -10,7 +10,7 @@
     background-color: #5bc4bf;
     border-radius: 25px 25px 5px 25px;
     margin-left: 10%; 
-    height: 20px;
+    min-height: 20px;
     padding: 10px;
     width: 100%;
 }
@@ -19,7 +19,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    height: 40px;
+    min-height: 40px;
     text-align: center;
     margin-bottom:25px;
     margin-right: 12.5%;
